--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -10,6 +10,11 @@
 <body class="bg-light">
 <div class="container py-5">
 	<h2 class="mb-4">Análise de Perigos - SIQUALIA</h2>
+	<div class="my-3" id="loading" style="display: none;">
+		<div class="spinner-border text-primary" role="status">
+			<span class="visually-hidden">Carregando...</span>
+		</div>
+	</div>
 	
 	<!-- Produto -->
 	<div class="mb-3">
