Fix coluna ações

--- a/app/static/avaliacoes.html
+++ b/app/static/avaliacoes.html
@@ -100,7 +100,7 @@
 			<th>Etapa</th>
 			<th>Perigo</th>
 			<th>Resultado</th>
-			<th>Ações</th>
+			<th style="white-space: nowrap;">Ações</th>
 		</tr>
 		</thead>
 		<tbody id="corpoTabelaResumo"></tbody>
